create github pages

--- a/page1.html
+++ b/page1.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site for free</a></section><section class="features11 cid-rN7A1x4a7O" id="features11-5f">
+<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="features11 cid-rN7A1x4a7O" id="features11-5f">
 
     
 
